improved email validation, now should work on all valid addresses. fixed issue with radio button selection on survey question 1. tweaked some question/error wording/grammar. removed redundant line breaks in radio button lists

--- a/front-end/css/style.css
+++ b/front-end/css/style.css
@@ -212,6 +212,10 @@ input::-moz-focus-inner {
 input[type="radio"] {
 	margin: 0 10px 0 10px;
 }
+
+input[type="checkbox"] {
+	margin: 0 10px 0 10px;
+}
 /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
 
 .row.content {
